--- a/index.html
+++ b/index.html
@@ -6,27 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="尺规作图">
     <meta name="author" content="gaotianpu,新浪微博@高天蒲">
-    <title>尺规作图</title>
-    <script async src="static/main.js"></script>
+    <title>高天蒲的作品集</title> 
 </head>
 
 <body style="margin: 0px; padding:0px; ">
-    <div id="toolbox" style="margin: 5px; ">
-        <label><input type="radio" name="toolbox" value="0" checked>移动 </label></label>
-        <label><input type="radio" name="toolbox" value="1">点 </label></label>
-        <label><input type="radio" name="toolbox" value="2">直线 </label></label>
-        <label><input type="radio" name="toolbox" value="3">圆 </label></label>
-        <label><input type="radio" name="toolbox" value="4">中垂线 </label></label>
-        <label><input type="radio" name="toolbox" value="5">角平分线 </label></label>
-        <label><input type="radio" name="toolbox" value="6">过点垂线 </label></label>
-        <label><input type="radio" name="toolbox" value="7">平行线 </label></label>
-        <label><input type="radio" name="toolbox" value="8">圆规 </label></label>
-    </div>
-    <div>
-        <input id="btn_undo" type="button" name="editor" value="撤销" />
-        <input id="btn_redo" type="button" name="editor" value="重做" />
-    </div>
-    <canvas id="canvas" width="800" height="500"></canvas>
+     <a href="/cwrac/index.html">尺规作图</a>
 </body>
 
 </html>
