--- a/cwrac/index.html
+++ b/cwrac/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no"> 
     <meta name="description" content="尺规作图">
     <meta name="author" content="gaotianpu,新浪微博@高天蒲">
     <title>尺规作图</title>
