--- a/cwrac/index.html
+++ b/cwrac/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="尺规作图">
     <meta name="author" content="gaotianpu,新浪微博@高天蒲">
     <title>尺规作图</title>
+    <style>
+    html{-webkit-tap-highlight-color: rgba(0,0,0,0);}
+    body{-webkit-tap-highlight-color: rgba(0,0,0,0);}
+    </style>
     <script async src="/cwrac/static/main.js"></script>
 </head>
 
