--- a/cwrac/index.html
+++ b/cwrac/index.html
@@ -3,32 +3,56 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="尺规作图">
     <meta name="author" content="gaotianpu,新浪微博@高天蒲">
     <title>尺规作图</title>
+    <script async src="static/main.js"></script>
     <style>
-    html{-webkit-tap-highlight-color: rgba(0,0,0,0);}
-    body{-webkit-tap-highlight-color: rgba(0,0,0,0);}
+        /* HIDE RADIO */
+        [type=radio] {
+            position: absolute;
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        /* IMAGE STYLES */
+        [type=radio]+img {
+            width: 28px;
+            height: 28px;
+            cursor: pointer;
+        }
+
+        /* CHECKED STYLES */
+        [type=radio]:checked+img {
+            width: 28px;
+            height: 28px;
+            outline: 2px solid #f00;
+        }
     </style>
-    <script async src="/cwrac/static/main.js"></script>
 </head>
 
 <body style="margin: 0px; padding:0px; ">
     <div id="toolbox" style="margin: 5px; ">
-        <label><input type="radio" name="toolbox" value="0" checked>移动 </label></label>
-        <label><input type="radio" name="toolbox" value="1">点 </label></label>
-        <label><input type="radio" name="toolbox" value="2">直线 </label></label>
-        <label><input type="radio" name="toolbox" value="3">圆 </label></label>
-        <label><input type="radio" name="toolbox" value="4">中垂线 </label></label>
-        <label><input type="radio" name="toolbox" value="5">角平分线 </label></label>
-        <label><input type="radio" name="toolbox" value="6">过点垂线 </label></label>
-        <label><input type="radio" name="toolbox" value="7">平行线 </label></label>
-        <label><input type="radio" name="toolbox" value="8">圆规 </label></label>
+        <label title="移动"><input type="radio" name="toolbox" value="0" checked><img src="static/images/movie.svg" alt="移动 Movie">
+        </label>
+        <label title="点"><input type="radio" name="toolbox" value="1"><img src="static/images/point.svg" alt="点 Point"> </label>
+        <label title="线"><input type="radio" name="toolbox" value="2"><img src="static/images/line.svg" alt="线 Line"> </label>
+        <label title="圆"><input type="radio" name="toolbox" value="3"><img src="static/images/circle.svg" alt="圆 Circle"> </label>
+        <label title="中垂线"><input type="radio" name="toolbox" value="4"><img src="static/images/perpendicular_bisector.svg"
+                alt="中垂线"> </label>
+        <label title="角平分线"><input type="radio" name="toolbox" value="5"><img src="static/images/angle_bisector.svg" alt="角平分线">
+        </label>
+        <label title="过点垂线"><input type="radio" name="toolbox" value="6"><img src="static/images/perpendicular_line.svg" alt="过点垂线">
+        </label>
+        <label title="平行线"><input type="radio" name="toolbox" value="7"><img src="static/images/parallel_line.svg" alt="平行线">
+        </label>
+        <label title="圆规"><input type="radio" name="toolbox" value="8"><img src="static/images/circle.svg" alt="圆规"> </label>
     </div>
     <div>
-        <input id="btn_undo" type="button" name="editor" value="撤销" />
-        <input id="btn_redo" type="button" name="editor" value="重做" />
+        <input id="btn_undo" type="image" src="static/images/undo.svg" value="撤销" />
+        <input id="btn_redo" type="image" src="static/images/redo.svg" value="重做" />
     </div>
     <canvas id="canvas" width="800" height="500"></canvas>
 </body>
